<resources>
    <string name="app_name">Stylista</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email address</string>
    <string name="hintEmail">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_new_password_hint">repeat password</string>
    <string name="hintPassword">must be 8 characters</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="hintConfirmPassword">repeat password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="orLoginWith">or Login with</string>
    <string name="orRegisterWith">or Register with</string>
    <string name="facebook">f</string>
    <string name="google"> </string>
    <string name="alternativeSignUp">Don\'t have an account? Sign up</string>
    <string name="alternativeLogin">Already have an account? Log in</string>
    <string name="facebook_app_id">633354209312421</string>
    <string name="default_web_client_id">464014514904-h0asp21582a5fld1oe4qlokith9svgqo.apps.googleusercontent.com</string>
    <string name="facebook_client_token">5acb7e7e4dacdbeac939f44544bbec33</string>
    <string name="fb_login_protocol_scheme">fb1668977596911004</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_subtitle">Don’t worry! It happens. Please enter the email associated with your account.</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_code">Send code</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset password</string>
    <string name="remember_password">Remember password? Log in</string>
    <string name="check_mail">Please check your\nemail</string>
    <string name="check_mail_subtitle">We’ve sent a code to your email</string>
    <string name="send_code_again">Send code again</string>
    <string name="resetTitle">Reset password</string>
    <string name="resetSubtitle">Please type something that you\'ll remember</string>
    <string name="password_changed">Password changed</string>
    <string name="password_changed_subtitle">Your password has been changed\nsuccessfully</string>
    <string name="back_to_login">Back to login</string>







</resources>

