<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45">



    <TextView
            android:id="@+id/passwordChangedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_changed"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/passwordChangedSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_changed_subtitle"
            android:textSize="16sp"
            android:textColor="#B3000000"
            android:textStyle="bold"
            android:fontFamily="@font/inter"
            android:textAlignment="center"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginBottom="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>
